--- a/hangyl_hanja.dict.yaml
+++ b/hangyl_hanja.dict.yaml
@@ -4710,8 +4710,8 @@ import_tables:
 亐	qul	울
 鬱	qul	울
 蔚	qul	울
-雄	qunq	웅
-熊	qunq	웅
+雄	quq	웅
+熊	quq	웅
 黿	quen	원
 鵷	quen	원
 騵	quen	원
@@ -8055,3 +8055,4 @@ import_tables:
 機能	gi nyq	기능
 制禦	jei qe	제어
 千年萬年	cen nien man nien	천년만년
+再活	jai hual	재활
